@@ -981,6 +981,15 @@ IATI出版社
 #search_humanitarian_transaction_txt
 人道主义事务
 
+#search_commitment_txt
+总承诺阈值
+
+#search_commitment_min_txt
+最低承诺阈值
+
+#search_commitment_max_txt
+最大承诺阈值
+
 #search_view_txt
 EXPLORE <span>筛选</span>
 
