@@ -1014,6 +1014,15 @@ Humanitarian Activity
 #search_humanitarian_transaction_txt
 Humanitarian Transaction
 
+#search_commitment_txt
+Total Commitment Threshold
+
+#search_commitment_min_txt
+Commitment Threshold Min
+
+#search_commitment_max_txt
+Commitment Threshold Max
+
 #search_view_txt
 EXPLORE <span>filters</span>
 
