@@ -983,6 +983,15 @@ Activité humanitaire
 #search_humanitarian_transaction_txt
 Transaction humanitaire
 
+#search_commitment_txt
+Seuil total d'engagement
+
+#search_commitment_min_txt
+Seuil minimum d'engagement
+
+#search_commitment_max_txt
+Seuil maximal d'engagement
+
 #search_view_txt
 EXPLORE <span>filtres</span>
 
