@@ -365,6 +365,16 @@
 		<div class="text">{search_text}</div><span><span class="filter_icon">&#10096;&#10097;</span>{search_humanitarian_transaction_txt}</span>
 	</div>
 
+#search_display_commitment_min trim=ends
+	<div class="search_query">
+		<div class="text">{search_text}</div><span><span class="filter_icon">&#10096;&#10097;</span>{search_commitment_min_txt}</span>
+	</div>
+
+#search_display_commitment_max trim=ends
+	<div class="search_query">
+		<div class="text">{search_text}</div><span><span class="filter_icon">&#10096;&#10097;</span>{search_commitment_max_txt}</span>
+	</div>
+
 #main_searchmin
 <div class="default min">
 	<div class="search_cont">
