@@ -980,6 +980,15 @@ IATI प्रकाशक
 #search_humanitarian_transaction_txt
 मानवीय लेन-देन
 
+#search_commitment_txt
+कुल प्रतिबद्धता थ्रेसहोल्ड
+
+#search_commitment_min_txt
+न्यूनतम प्रतिबद्धता थ्रेसहोल्ड
+
+#search_commitment_max_txt
+अधिकतम प्रतिबद्धता थ्रेसहोल्ड
+
 #search_view_txt
 EXPLORE <span>फिल्टर</span>
 
