@@ -983,6 +983,15 @@ IATI出版
 #search_humanitarian_transaction_txt
 人道的取引
 
+#search_commitment_txt
+総コミットメントしきい値
+
+#search_commitment_min_txt
+最小コミットしきい値
+
+#search_commitment_max_txt
+最大コミットメントしきい値
+
 #search_view_txt
 EXPLORE <span>フィルタ</span>
 
