@@ -980,6 +980,15 @@ Actividad humanitaria
 #search_humanitarian_transaction_txt
 Transacción humanitaria
 
+#search_commitment_txt
+Umbral de compromiso total
+
+#search_commitment_min_txt
+Umbral mínimo de compromiso
+
+#search_commitment_max_txt
+Umbral de compromiso máximo
+
 #search_view_txt
 EXPLORE <span>filtros</span>
 
