@@ -1,3 +1,9 @@
+Development Portal (2019-11-15 shi)
+==============================
+Add total commitment threshold
+Add translations
+
+
 Development Portal (2019-11-13 shi)
 ==============================
 Fix org file table layout
